--- a/src/app/components/attribute-dictionary/edit-attribute-dictionary/edit-attribute-dictionary.component.html
+++ b/src/app/components/attribute-dictionary/edit-attribute-dictionary/edit-attribute-dictionary.component.html
@@ -58,7 +58,7 @@
               'is-valid': editAttributeDictionaryForm.controls.componentName.status === 'VALID',
               'form-select': true,
             }" id="category">
-              <option *ngFor="let categoryObj of (deviceCategoryDict?.list ?? []); let i = index">
+              <option *ngFor="let categoryObj of (componentDictionary?.getAll() ?? []); let i = index">
                 {{ categoryObj.name }}
               </option>
             </select>
