--- a/src/app/components/attribute/add-attribute/add-attribute.component.html
+++ b/src/app/components/attribute/add-attribute/add-attribute.component.html
@@ -2,8 +2,7 @@
   <h2><i class="bi bi-bar-chart"></i> Add Attribute</h2>
   <i class="bi bi-columns"></i>
   <span class="text-primary d-inline-flex focus-ring py-1 px-2 text-decoration-none">
-    {{ this.toString(this.addAttributeFrom.controls.id.value) }}</span
-  >
+    {{ this.toString(this.addAttributeFrom.controls.id.value) }}</span>
   <form [formGroup]="addAttributeFrom" (ngSubmit)="submitForm()" class="needs-validation" novalidate>
     <div class="row g-3">
       <h4>Attribute object</h4>
@@ -12,16 +11,11 @@
           <div class="col">
             <div class="form-group">
               <label for="deviceId" class="form-label">Device</label>
-              <select
-                (change)="changeDeviceId($event)"
-                formControlName="deviceId"
-                [ngClass]="{
+              <select (change)="changeDeviceId($event)" formControlName="deviceId" [ngClass]="{
                   'is-invalid': addAttributeFrom.hasError('atLeastOneValidator'),
                   'is-valid': !addAttributeFrom.hasError('atLeastOneValidator'),
                   'form-select': true,
-                }"
-                id="deviceId"
-              >
+                }" id="deviceId">
                 <option *ngFor="let deviceObj of deviceDictionary; let i = index" value="{{ deviceObj._id }}">
                   {{ deviceObj.name }}
                 </option>
@@ -37,16 +31,11 @@
           <div class="col">
             <div class="form-group mb-2">
               <label for="modelId" class="form-label">Model</label>
-              <select
-                (change)="changeModelId($event)"
-                formControlName="modelId"
-                [ngClass]="{
+              <select (change)="changeModelId($event)" formControlName="modelId" [ngClass]="{
                   'is-invalid': addAttributeFrom.hasError('atLeastOneValidator'),
                   'is-valid': !addAttributeFrom.hasError('atLeastOneValidator'),
                   'form-select': true,
-                }"
-                id="modelId"
-              >
+                }" id="modelId">
                 <option *ngFor="let modelObj of modelDictionary; let i = index" value="{{ modelObj._id }}">
                   {{ modelObj.name }}
                 </option>
@@ -62,20 +51,13 @@
           <div class="col">
             <div class="form-group mb-2">
               <label for="connectionId" class="form-label">Connection</label>
-              <select
-                (change)="changeConnectionId($event)"
-                formControlName="connectionId"
-                [ngClass]="{
+              <select (change)="changeConnectionId($event)" formControlName="connectionId" [ngClass]="{
                   'is-invalid': addAttributeFrom.hasError('atLeastOneValidator'),
                   'is-valid': !addAttributeFrom.hasError('atLeastOneValidator'),
                   'form-select': true,
-                }"
-                id="connectionId"
-              >
-                <option
-                  *ngFor="let connectionObj of connectionDictionary; let i = index"
-                  value="{{ connectionObj._id }}"
-                >
+                }" id="connectionId">
+                <option *ngFor="let connectionObj of connectionDictionary; let i = index"
+                  value="{{ connectionObj._id }}">
                   {{ connectionObj.name }}
                 </option>
               </select>
@@ -92,21 +74,14 @@
       <div class="col">
         <div class="form-group mb-2">
           <label for="attributeDictionaryId" class="form-label">Attribute Dictionary Id</label>
-          <select
-            (change)="changeAttributeDictionaryId($event)"
-            formControlName="attributeDictionaryId"
-            formControlName="attributeDictionaryId"
-            [ngClass]="{
+          <select (change)="changeAttributeDictionaryId($event)" formControlName="attributeDictionaryId"
+            formControlName="attributeDictionaryId" [ngClass]="{
               'is-invalid': this.addAttributeFrom.controls.attributeDictionaryId.status !== 'VALID',
               'is-valid': this.addAttributeFrom.controls.attributeDictionaryId.status === 'VALID',
               'form-select': true,
-            }"
-            id="attributeDictionaryId"
-          >
-            <option
-              *ngFor="let attributeDictionaryObj of attributeDictionary; let i = index"
-              value="{{ attributeDictionaryObj._id }}"
-            >
+            }" id="attributeDictionaryId">
+            <option *ngFor="let attributeDictionaryObj of attributeDictionary; let i = index"
+              value="{{ attributeDictionaryObj._id }}">
               {{ attributeDictionaryObj.name }}
             </option>
           </select>
@@ -125,22 +100,17 @@
       <div class="col">
         <div class="form-group mb-2">
           <label for="value" class="form-label">Value</label>
-          <input
-            type="text"
-            formControlName="value"
-            id="id"
-            required
+          <input type="text" formControlName="value" class="form-control" id="value" aria-label="value" required
             [ngClass]="{
               'is-invalid': this.addAttributeFrom.controls.value.status !== 'VALID',
               'is-valid': this.addAttributeFrom.controls.value.status === 'VALID',
               'form-control': true,
-            }"
-          />
+            }" />
           <div class="invalid-feedback">Please select a valid state.</div>
           <div *ngIf="this.addAttributeFrom.controls.value.errors" class="invalid-feedback">
             <div *ngIf="this.addAttributeFrom.controls.value.errors.required">Value is required</div>
             <div *ngIf="this.addAttributeFrom.controls.value.errors.minlength">
-              Value must be at less 250 characters
+              Value must be at least 250 characters
             </div>
           </div>
         </div>
@@ -149,11 +119,8 @@
     <div class="row">
       <div class="col">
         <div class="form-group mb-3">
-          <button
-            type="submit"
-            [disabled]="!(this.addAttributeFrom.valid && this.addAttributeFrom.touched)"
-            class="btn btn-primary"
-          >
+          <button type="submit" [disabled]="!(this.addAttributeFrom.valid && this.addAttributeFrom.touched)"
+            class="btn btn-primary">
             Add attribute
           </button>
 
