--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
-<div class="flex flex-col gap-4">
-  <h1 class="text-3xl font-bold">Home</h1>
-  <h2 class="text-gray-700">Welcome to the home page!</h2>
+<div class="container mx-auto p-4">
   <div class="border p-6">
-    <markdown [data]="md"></markdown>
+    <p class="text-gray-600">
+      <span [innerHTML]="md"></span>
+    </p>
   </div>
 </div>
